# packages/server/src/services/uniswap.ts
@@ -85,7 +85,8 @@ export default class UniswapFetcher {
 
         if (pair == null && response.error) {
             throw new Error(
-                `Could not find pair with ID ${pairId}. Error from response: ${response.error?.toString() || ''
+                `Could not find pair with ID ${pairId}. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         } else if (pair == null) {
@@ -132,7 +133,8 @@ export default class UniswapFetcher {
 
         if (pairs == null || pairs.length === 0) {
             throw new Error(
-                `Could not fetch top pairs. Error from response: ${response.error?.toString() || ''
+                `Could not fetch top pairs. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         }
@@ -140,7 +142,7 @@ export default class UniswapFetcher {
         return pairs;
     }
 
-    static async getTopPerformingPairs(count = 1000): Promise<UniswapPair[]> {
+    static async getTopPerformingPairs(count = 10): Promise<UniswapPair[]> {
         const response: ApolloResponse<{
             pairs: UniswapPair[];
         }> = await UniswapFetcher.client.query({
@@ -178,7 +180,8 @@ export default class UniswapFetcher {
 
         if (pairs == null || pairs.length === 0) {
             throw new Error(
-                `Could not fetch pairs subject to alerting. Error from response: ${response.error?.toString() || ''
+                `Could not fetch pairs subject to alerting. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         }
@@ -200,8 +203,8 @@ export default class UniswapFetcher {
                             where: {
                                 pairAddress: "${pairId}",
                                 date_gt: ${Math.floor(
-                startDate.getTime() / 1000
-            )}
+                                    startDate.getTime() / 1000
+                                )}
                                 date_lt: ${Math.floor(endDate.getTime() / 1000)}
                             }
                         ) {
@@ -222,7 +225,8 @@ export default class UniswapFetcher {
 
         if (pairDayDatas == null) {
             throw new Error(
-                `Could not fetch daily data for pair ${pairId}. Error from response: ${response.error?.toString() || ''
+                `Could not fetch daily data for pair ${pairId}. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         }
@@ -243,11 +247,12 @@ export default class UniswapFetcher {
                         pairHourDatas(orderBy: hourStartUnix, orderDirection: asc,
                             where: {
                                 pair: "${pairId}",
-                                hourStartUnix_gt: ${Math.floor(startDate.getTime() / 1000) - 1
-                }
+                                hourStartUnix_gt: ${
+                                    Math.floor(startDate.getTime() / 1000) - 1
+                                }
                                 hourStartUnix_lt: ${Math.floor(
-                    endDate.getTime() / 1000
-                )}
+                                    endDate.getTime() / 1000
+                                )}
                             }
                         ) {
                             pair {
@@ -269,7 +274,8 @@ export default class UniswapFetcher {
 
         if (pairHourDatas == null) {
             throw new Error(
-                `Could not fetch daily data for pair ${pairId}. Error from response: ${response.error?.toString() || ''
+                `Could not fetch daily data for pair ${pairId}. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         }
@@ -410,7 +416,8 @@ export default class UniswapFetcher {
 
         if (swaps == null) {
             throw new Error(
-                `Could not fetch recent swaps for pair ${pairId}. Error from response: ${response.error?.toString() || ''
+                `Could not fetch recent swaps for pair ${pairId}. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         } else if (swaps.length === 0) {
@@ -452,7 +459,8 @@ export default class UniswapFetcher {
 
         if (mints == null) {
             throw new Error(
-                `Could not fetch recent mints for pair ${pairId}. Error from response: ${response.error?.toString() || ''
+                `Could not fetch recent mints for pair ${pairId}. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         } else if (mints.length === 0) {
@@ -496,7 +504,8 @@ export default class UniswapFetcher {
 
         if (burns == null) {
             throw new Error(
-                `Could not fetch recent burns for pair ${pairId}. Error from response: ${response.error?.toString() || ''
+                `Could not fetch recent burns for pair ${pairId}. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         } else if (burns.length === 0) {
@@ -525,7 +534,8 @@ export default class UniswapFetcher {
 
         if (ethPrice == null) {
             throw new Error(
-                `Could not fetch ethPrice. Error from response: ${response.error?.toString() || ''
+                `Could not fetch ethPrice. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         }
@@ -577,7 +587,8 @@ export default class UniswapFetcher {
 
         if (liquidityPositionSnapshots == null) {
             throw new Error(
-                `Could not fetch liquidity positions for address ${address}. Error from response: ${response.error?.toString() || ''
+                `Could not fetch liquidity positions for address ${address}. Error from response: ${
+                    response.error?.toString() || ''
                 }`
             );
         } else if (liquidityPositionSnapshots.length === 0) {
